syntax = "proto3";

import "google/protobuf/empty.proto";
package events;

option go_package = ".";

message EventMessage {
  string id = 1;
  string service_name = 2;
  string origin_service = 3;
  string event_type = 4;
  bytes payload = 5;
  string origin = 6;
  string username = 7;
  string github_repo_url = 8;
  string github_access_token = 9;
  string user_id = 10;
}
service EventService {
  rpc PublishEvent(EventMessage) returns (google.protobuf.Empty);
}